# scisciDB

./: .gitignore  .missing_files_oa.py  00_bucketized_metadata.py  02_augment_s2fos.py  03_subset_metadata_by_decade.py  04_s2searchApi.py  05_specterAPI.py  MAKEFILE  Makefile  README  README.html  README.md  add_http.py  add_s2orc_section_coll.py  augment_openalex.py  augmenting_papers_with_s2orc_bool.py  augmenting_papers_with_works_oa  augmenting_papers_with_works_oa.py  augmenting_papers_with_works_oa.sh  convert_mag_to_string.py  playbook.yaml  playground.md  playground.mongodb  pull_data.py  push_mongoDB.py  push_mongodb.py  pyproject.toml  query.py  run_embeddings2hdbscan.sh  run_specterAPI.sh  run_wrangle_specter.sh  slurm-5903273.out  tmp.sh  tox.ini  update_mongodb.sh
.github/workflows/: deploy.yml
01_s2fos_classif/: augment_s2orc_S2FOS.py  run_classif_vac.sh  script2vac.py
01_s2fos_classif/data/: lines_count.txt  (+2 more)
05_query_specter_api/: run_simple_specter.sh  specterAPI.py
20230131v1/: README.md  get_data.sh  helpers.py  mongodb.py  update_mongodb.py  update_s2orc.py
backend/: README.md  update_mongoDB.sh
frontend/: .gitignore  local.db  package-lock.json  package.json  svelte.config.js  vite.config.ts
openalex-snapshot/: RELEASE_NOTES.txt
src/: .subset_data.py  augment_s2fos.py  bucketize.py  bucketized_metadata.py  embeddings2hdbscan.py  get_s2fos_lookup.py  get_s2fos_lookup2vac.py  push_mongodb.py  s2searchAPI.py  specterAPI.py  specterAPI_vacc.sh  subset_metadata_by_decade.py  top2vec.py  wrangle_specter.py
tests/: conftest.py
(+258 files in other folders)
