[project]
name = "sciscidb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "csvkit>=2.1.0",
    "ipython>=9.5.0",
    "jsonlines>=4.0.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.2",
    "pymongo>=4.14.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
